first v - doesn't works well

--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,15 @@
 ---
 
+- hosts: 127.0.0.1
+  connection: local
+  roles:
+     - strongswan-ca
+
 - hosts: vpn
   roles:
-    - tinc
+#     - strongswan-certs
+     - strongswan
+#    - tinc
 
 - hosts: removevpn
   roles:
