--- a/roles/strongswan/tasks/main.yml
+++ b/roles/strongswan/tasks/main.yml
@@ -1,35 +1,35 @@
 ---
 
-- name: install epel-release (redhat)
-  yum: >
-    name=epel-release
-    state=latest
-  when: (ansible_os_family == "RedHat" and ansible_distribution_major_version == "7")
-  become: true
-
-- name: install strongswan
-  package: >
-    name=strongswan
-    state=latest
-  become: true
-
-- name: install networking tools (tcpdump)
-  package: >
-    name=tcpdump
-    state=latest
-  become: true
-
-- name: install networking tools (nmap)
-  package: >
-    name=nmap
-    state=latest
-  become: true
-
-- name: install rsync
-  package: >
-    name=rsync
-    state=latest
-  become: true
+#- name: install epel-release (redhat)
+#  yum: >
+#    name=epel-release
+#    state=latest
+#  when: (ansible_os_family == "RedHat" and ansible_distribution_major_version == "7")
+#  become: true
+#
+#- name: install strongswan
+#  package: >
+#    name=strongswan
+#    state=latest
+#  become: true
+#
+#- name: install networking tools (tcpdump)
+#  package: >
+#    name=tcpdump
+#    state=latest
+#  become: true
+#
+#- name: install networking tools (nmap)
+#  package: >
+#    name=nmap
+#    state=latest
+#  become: true
+#
+#- name: install rsync
+#  package: >
+#    name=rsync
+#    state=latest
+#  become: true
 
 - name: ensure /etc/strongswan/ipsec.d directory exists
   file:
@@ -38,18 +38,18 @@
   become: true
 
 - name: transfer the ca cert
-  copy: src=roles/strongswan-ca/files/strongswan_certs/cacerts dest=/etc/strongswan/ipsec.d
+  copy: src=strongswan_certs/cacerts dest=/etc/strongswan/ipsec.d
   become: true
 
 - name: sync the cert files on each host
   synchronize: >
-    src=roles/strongswan-ca/files/strongswan_certs/certs
+    src=strongswan_certs/certs
     dest=/etc/strongswan/ipsec.d
   become: true
 
 - name: sync the keys files on each host
   synchronize: >
-    src=roles/strongswan-ca/files/strongswan_certs/private
+    src=strongswan_certs/private
     dest=/etc/strongswan/ipsec.d
   become: true
 
